# celebes

./: CMakeLists.txt  celebes.bnf  celebes.g4
example/: hello.cbs
include/celebes/: lexer.hpp  parser.hpp
include/celebes/ast/: nodes.hpp
src/: lexer.cpp  parser.cpp
test/: CMakeLists.txt  lexer.cpp
